# investments-scrapper-function

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml
src/: analizer.py  models.py  scrapper.py  storage.py
src/core/: database.py  settings.py
src/providers/: scrapper.py  storage.py
src/usecases/: search.py
